# AI-NPC-simulation-with-finite-state-machine-architecture

./: .gitignore  CMakeLists.txt  Readme.md
build-mingw/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json
build-mingw/Testing/Temporary/: CTestCostData.txt
build-mingw/src/: Makefile  cmake_install.cmake
build-mingw/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
cmake/: FetchRaylib.cmake  ProjectOptions.cmake
include/sim/: Simulation.hpp
include/sim/ai/: AiDebugSnapshot.hpp  FeedForwardNetwork.hpp  FsmPolicy.hpp  IPolicy.hpp  ITrainablePolicy.hpp  NpcFiniteStateMachine.hpp  Observation.hpp  PersistentLearningPolicy.hpp  PolicyRegistry.hpp  PolicyTypes.hpp  PpoOptimizer.hpp  PpoTrajectoryBuffer.hpp
include/sim/core/: LogLevel.hpp  Logger.hpp  SimulationTimer.hpp
include/sim/entities/: NpcAction.hpp  NpcState.hpp  Player.hpp  PoliceManager.hpp  PoliceNpc.hpp
include/sim/math/: Vec2.hpp
include/sim/rl/: CheckpointManager.hpp  EpisodeRecorder.hpp  ITransitionSink.hpp  RlTypes.hpp
include/sim/visualization/: AiDebugWindows.hpp  SimulationRenderer.hpp
models/: police_persistent_learning.policy
src/: CMakeLists.txt  Simulation.cpp  main.cpp
src/ai/: AiDebugSnapshot.cpp  FeedForwardNetwork.cpp  FsmPolicy.cpp  IPolicy.cpp  NpcFiniteStateMachine.cpp  Observation.cpp  PersistentLearningPolicy.cpp  PolicyRegistry.cpp  PpoOptimizer.cpp  PpoTrajectoryBuffer.cpp
src/core/: LogLevel.cpp  Logger.cpp  SimulationTimer.cpp
src/entities/: NpcAction.cpp  NpcState.cpp  Player.cpp  PlayerLifeState.cpp  PoliceManager.cpp  PoliceNpc.cpp
src/math/: Vec2.cpp
src/rl/: CheckpointManager.cpp  EpisodeRecorder.cpp
src/visualization/: AiDebugWindows.cpp  SimulationRenderer.cpp
tests/: CMakeLists.txt  NpcFiniteStateMachineTests.cpp
